..F....... [ZBXNEXT-5036] added preloader for popup menus (ashubin)
...G...... [ZBXNEXT-287] added SSL support for agent HTTP checks (asestakovs)
...G...PS. [ZBXNEXT-5179] added option to specify absolute path in LoadModule; thanks to Glebs Ivanovskis for the patch (asestakovs)

Bug fixes:
...G...PS. [ZBX-15899] added output sanitization to prevent invalid UTF-8 sequences in regexp-based text replacement (Andris)
..F....... [ZBX-16073] fixed horizontal scrolling in map (vasilijs)
........S. [ZBX-15943] fixed discovered hosts are not removed from table 'dhosts' after removing and adding the corresponding discovery check (akozlovs)
..F....... [ZBX-15875] fixed colors for the multiselect disabled elements (ashubin)
..F....... [ZBX-10948] 'IT Services --> Service Time --> Note' infinite stretching (rlataria)
..F....... [ZBX-15585] fixed web scenarios pair manager issue when fields are duplicating on post type toggle (talbergs)
...G...... [ZBX-16142] fixed missing sys/ioctl.h from src/libs/zbxsysinfo/openbsd/net.c; thanks to Andrea Biscuola for the patch (akozlovs)
.......PS. [ZBX-16166] fixed Zabbix fping feature detection does not work with fping builds since 10 Feb 2017 (akozlovs)
....I..... [ZBX-16178] fixed distributive can contain untracked backup file include/config.h.in~ (akozlovs)
........S. [ZBX-16170] fixed crash in global event correlation (vso)
...G...... [ZBX-16096] fixed "system.cpu.util" reporting incorrect CPU utilisation due to guest time sometimes not being fully included in user time by "/proc/stat" (vso)
..F....... [ZBX-15882] fixed widgets flickering on refresh (ashubin)
..F....... [ZBX-15974] improved trigger expression list in trigger modal form (gcalenko)
...G...... [ZBX-14441] fixed windows agent "eventlog" key for reading big event log files of windows 2003 (MVekslers)
..F....... [ZBX-16109] fixed hidden error in graphs for PHP 7.3.5 (rlataria)